Fixed temp and icon misalignment and rounded wind

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -42,7 +42,8 @@
   color: rgb(33, 33, 33);
   font-size: 64px;
   font-weight: 400;
-  margin-left: 20px;
+    margin-left: 10px;
+
 }
 
 .Weather .unit {
